--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -1,5 +1,11 @@
-items:
-- name: Parsing JSON and AVRO data
-  href: https://docs.microsoft.com/azure/stream-analytics/stream-analytics-parsing-json
-- name: File 1
-  href: ./file1.md
+- name: Overview
+  items:
+  - name: Parsing JSON and AVRO data
+    href: https://docs.microsoft.com/azure/stream-analytics/stream-analytics-parsing-json
+- name: QuickStarts
+  items:
+  - name: File 1
+    href: ./file1.md
+  - name: File 2
+    href: ./file2.md
+    
