--- a/docs/breadcrumb/toc.yml
+++ b/docs/breadcrumb/toc.yml
@@ -1,3 +1,7 @@
-- name: Eason
-  tocHref: /validator-tester/toc
-  topicHref: /validator-tester/breadcrumb/hello
+- name: Azure
+  tocHref: /azure/
+  topicHref: /azure
+  items:
+  - name: Eason
+    tocHref: /validator-tester/
+    topicHref: /validator-tester/file1
