--- a/docs/breadcrumb/toc.yml
+++ b/docs/breadcrumb/toc.yml
@@ -1,7 +1,7 @@
-- name: Azure
-  tocHref: /azure/
-  topicHref: /azure
+- name: Validator Tester
+  tocHref: /validator-tester/
+  topicHref: /validator-tester
   items:
-  - name: Eason
+  - name: File1
     tocHref: /validator-tester/
     topicHref: /validator-tester/file1
