--- a/docs/breadcrumb/toc.yml
+++ b/docs/breadcrumb/toc.yml
@@ -5,3 +5,17 @@
   - name: Relative File1.md
     tocHref: /validator-tester/
     topicHref: ../file1.md
+- name: Validator Tester
+  tocHref: /validator-tester/
+  topicHref: /validator-tester
+  items:
+  - name: Relative File2.md
+    tocHref: /validator-tester/
+    topicHref: ../sub-folder/file2.md
+- name: Validator Tester
+  tocHref: /validator-tester/
+  topicHref: /validator-tester
+  items:
+    - name: Relative FileNotExist.md
+      tocHref: /validator-tester/
+      topicHref: ../file-not-exist.md
