--- a/docs/breadcrumb/toc.yml
+++ b/docs/breadcrumb/toc.yml
@@ -2,9 +2,9 @@
   tocHref: /validator-tester/
   topicHref: /validator-tester
   items:
-  - name: Relative FileNotExist.md
+  - name: Relative to File2.md
     tocHref: /validator-tester/file1
-    topicHref: ../file-not-exist.md
-  - name: Relative File2.md
-    tocHref: /validator-tester/eason/file3
     topicHref: ../sub-folder/file2.md
+  - name: Relative to FileNotExist.md
+    tocHref: /validator-tester/eason/file3
+    topicHref: ../file-not-exist.md
