add deprecated ms.prod

--- a/docs/sub-folder/certificationHome.yml
+++ b/docs/sub-folder/certificationHome.yml
@@ -1,5 +1,6 @@
 ### YamlMime:CertificationHome
-
+metadata:
+  ms.date: eason
 title: Microsoft Certifications
 summary: 获得认证表明您正在紧随当今的技术角色和要求。选择工作角色以发现认证路径。
 
