add two new taxonomy

--- a/docs/sub-folder/hub.yml
+++ b/docs/sub-folder/hub.yml
@@ -13,6 +13,8 @@ metadata:
   author: saldana
   ms.author: saldana
   ms.date: 10/26/2021
+  ai-usage: random-value
+  contributor-type: invalid
   featureFlags:
   - clicktale
   brand: docs
